--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+    <ion-menu menuId="main-menu" content-id="main">
+        <ion-header>
+            <ion-toolbar>
+                <ion-title> </ion-title>
+            </ion-toolbar>
+        </ion-header>
+        <ion-content>
+            <ion-list>
+                <ion-item>Menu Item</ion-item>
+                <ion-item>Menu Item</ion-item>
+                <ion-item>Menu Item</ion-item>
+                <ion-item>Menu Item</ion-item>
+                <ion-item>Menu Item</ion-item>
+            </ion-list>
+        </ion-content>
+    </ion-menu>
+
+
+    <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
